--- a/new-file/index.html
+++ b/new-file/index.html
@@ -9,7 +9,8 @@
 </head>
   <body>
     <h1>TeTrIs</h1>
-
+    <div class="wrapper">
+    </div>
   </body>
 <script type="text/javascript" src="tetris.js">
 </script>
