--- a/new-file/index.html
+++ b/new-file/index.html
@@ -8,8 +8,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
   <body>
-    <h1>TeTrIs</h1>
-    <div class="wrapper">
+    <h1 class="text-tetris">Tetris</h1>
+    <div class="outer-wrapper">
+      <div class="wrapper">
+      </div>
     </div>
   </body>
 <script type="text/javascript" src="tetris.js">
