--- a/new-file/index.html
+++ b/new-file/index.html
@@ -9,6 +9,7 @@
 </head>
   <body>
     <h1 class="text-tetris">Tetris</h1>
+    <button id="start-game">Start</button>
     <div class="outer-wrapper">
       <div class="wrapper">
       </div>
