--- a/new-file/index.html
+++ b/new-file/index.html
@@ -14,6 +14,7 @@
       <div class="wrapper">
       </div>
     </div>
+    <canvas id="tetris" width="240" height="400">
   </body>
 <script type="text/javascript" src="tetris.js">
 </script>
